# hatch-argparse-manpage

./: CHANGES.md  README.md  pyproject.toml
docs/: hatch-argparse-manpage.3.md
hatch_argparse_manpage/: __about__.py  hooks.py  plugin.py
